# nbkp

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml
.github/workflows/: check-links.yml  demo.yml  publish-test.yml  publish.yml  release.yml  test.yml
build-scripts/: clidocs.py  configdocs.py  depgraph.py
demo/: demo.sh  record-demo.sh
docs/: architecture.md  building-and-testing.md  cli-reference.md  concepts.md  config-reference.md  conventions.md  features.md  guidelines.md  implementation-checklists.md  installation.md  internals.md  setup-development-environment.md  tutorial.md  usage.md
docs/config-examples/: encrypted-removable-drives.yaml  home-nas-backup.yaml  multi-hop-chain.yaml  personal-setup.yaml
marketing/: README.md
marketing/r-backup-intro/: config.yaml  post.md
nbkp/: __init__.py  check.py  cli.py  conventions.py  credentials.py  democli.py  fsprotocol.py  orchestration.py  output.py  preflight.py  scriptgen.py
nbkp/cli/: __init__.py  app.py  check_cmd.py  common.py  config_cmd.py  prune_cmd.py  run_cmd.py  sh_cmd.py  troubleshoot_cmd.py  volumes_cmd.py
nbkp/clihelpers/: __init__.py  config.py  endpoints.py  output.py  progress.py  severity.py  strictness.py
nbkp/config/: __init__.py  clihelpers.py  epresolution.py  loader.py  output.py  protocol.py  resolution.py  testkit.py
nbkp/credentials/: __init__.py
nbkp/demo/: __init__.py  app.py  output_cmd.py  seed_cmd.py
nbkp/democli/: __init__.py  output_cmd.py  seed_cmd.py
nbkp/disks/: __init__.py  auth.py  context.py  detection.py  direct.py  lifecycle.py  models.py  mount_checks.py  observation.py  output.py  strategy.py  udisks.py
nbkp/mount/: __init__.py  auth.py  detection.py  direct.py  lifecycle.py  observation.py  output.py  strategy.py  systemd.py
nbkp/ordering/: __init__.py  graph.py  output.py
nbkp/preflight/: __init__.py  checks.py  endpoint_checks.py  output.py  (+9 more)
scripts/: clidocs.py  configdocs.py  depgraph.py
tests/: conftest.py  test_check.py  test_cli.py  test_configloader.py  test_credentials.py  test_graph.py  test_output.py  test_preflight.py  test_scriptgen.py  test_sync_ordering.py
(+203 files in other folders)
